--- a/2D Controller/CSS/scroll-bar.css
+++ b/2D Controller/CSS/scroll-bar.css
@@ -3,14 +3,14 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #6D5D6E;
-    border-radius: 12px;
+    background: #222C37;
+    border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #4F4557;
+    background: #223850;
 }
 
 ::-webkit-scrollbar-thumb:active {
-    background: #6D5D6E;
+    background: #222C37;
 }
