--- a/2D Controller/CSS/table.css
+++ b/2D Controller/CSS/table.css
@@ -5,8 +5,13 @@ table, th, tr, td{
     text-align: start;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
     background-color: #f4f4f4;
+}
+
+td a {
+    text-decoration: none;
+    color: none;
 }
 
 .table-division {
