--- a/2D Controller/CSS/general.css
+++ b/2D Controller/CSS/general.css
@@ -22,8 +22,22 @@ h2 {
     font-size: larger;
 }
 
-.debug-division {
-    border: 2px solid red;
+iframe {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    box-shadow: 1px 2px 6px rgb(18, 18, 18);
+    border: none;
+    margin: 0px;
+    padding: 0;
+    
+    border-radius: 5px;
+}
+
+.iframe-body {
+    background-color: #222C37;
+    overflow-y: hidden;
 }
 
 .main-page-division {
