--- a/2D Controller/CSS/navigation-bar.css
+++ b/2D Controller/CSS/navigation-bar.css
@@ -1,18 +1,15 @@
 .nav-bar {
-    position: sticky;
-    top: 0;
-    margin: 25px 0;
     z-index: 1;
     width: 100%;
-    height: fit-content;
-    padding: 2px 10px;
+    margin: 0;
+    padding: 0px 10px;
     background-color: #222C37;
-    box-shadow: 1px 2px 6px rgb(18, 18, 18);
     border-radius: 5px;
 }
 
 .navbar-links {
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     width: 100%;
     display: flex;
     align-items: center;
