--- a/2D Controller/CSS/navigation-bar.css
+++ b/2D Controller/CSS/navigation-bar.css
@@ -14,6 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .navbar-links ul {
