Additions to HumanoidController documentation
Added documentation for the properties of the humanoid controller.

Remains to add documentation for the protected properties and double check that eveything is documented correctly

--- a/2D Controller/CSS/general.css
+++ b/2D Controller/CSS/general.css
@@ -58,9 +58,17 @@ iframe {
     color: #b83c82;
 }
 
+h1 .redirect-link {
+    text-decoration: none;
+}
+
 .redirect-link:hover {
     color: #ee4ba8;
     text-decoration: none;
+}
+
+h1 .redirect-link:hover {
+    text-decoration: underline;
 }
 
 /*
