Added new CSS class.

--- a/2D Controller/CSS/general.css
+++ b/2D Controller/CSS/general.css
@@ -85,3 +85,8 @@ h1 .redirect-link {
 h1 .redirect-link:hover {
     text-decoration: underline;
 }
+
+.uninteractable-link {
+    width: fit-content;
+    color: #bd3a84;
+}
