Combat system + Character setup

--- a/2D Controller/CSS/general.css
+++ b/2D Controller/CSS/general.css
@@ -52,6 +52,10 @@ img {
     z-index: 0;
 }
 
+.img-bottom-spacing {
+    margin-bottom: 10px;
+}
+
 .iframe-body {
     background-color: #222C37;
     overflow-y: hidden;
