--- a/2D Controller/CSS/class-title.css
+++ b/2D Controller/CSS/class-title.css
@@ -24,3 +24,13 @@
     font-weight: bolder;
     text-decoration: underline;
 }
+
+.combat-title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    font-size: 24px;
+    font-weight: bolder;
+    text-decoration: underline;
+}
