--- a/2D Controller/CSS/navigation-bar.css
+++ b/2D Controller/CSS/navigation-bar.css
@@ -4,37 +4,44 @@
     padding: 0px 10px;
     background-color: #222C37;
     border-radius: 5px;
+    pointer-events: none;
+    position: relative;
 }
 
 .navbar-links {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow-x: auto;
     white-space: nowrap;
+    pointer-events: none;
+    position: relative;
 }
 
 .navbar-links ul {
     list-style-type: none;
     padding-left: 0;
+    position: relative;
 }
 
 .navbar-links li {
     display: inline-block;
+    position: relative;
 }
 
 .navbar-links li a {
     background-color: #222C37;
-    padding: 9px 16px;
+    padding: 9px 12px;
     color: #fafafa;
     font-size: large;
     text-align: center;
     text-decoration: none;
     border-radius: 10px;
     transition: .5s;
+    pointer-events: auto;
 }
 
 .navbar-links li a:hover {
@@ -51,4 +58,30 @@
 
 #active-nav-link a:hover {
     text-decoration-color: #222C37;
+}
+
+.navbar-links li.arrow {
+    pointer-events: none;
+}
+
+.arrow {
+    font-size: small;
+    pointer-events: none;
+    color: #fafafa;
+}
+
+.navbar-links:before,
+.navbar-links:after,
+.navbar-links ul:before,
+.navbar-links ul:after,
+.navbar-links li:before,
+.navbar-links li:after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
 }
